css/style.css
@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,900|Open+Sans:400,300,700);

body {
	padding-top: 50px;
	font-family: "Roboto";
	font-weight: 400;
	font-size: 2em;
	position: relative;
}

h1, h2, h3, h4, h5, h6 {
	font-family: "Open Sans";
	font-weight: 100;
	margin: 0;
}

img {
	max-width: 200px;
}

a > img {
	height: 50px;
	padding: 5px;
}

.navbar {
	font-weight: 900;
	border-radius: 0;
	border: 0;
}

.page {
	padding: 50px 0;
}

h2 {
	text-align: center;
	margin-bottom: 30px;
}

.icon, .img-circle {
	display: block;
	margin: 0 auto;
	margin-bottom: 30px;
}

h3 {
	margin-bottom: 20px;
	text-align: center;
}

article > p {
	margin-bottom: 40px;
	text-align: center;
}

footer {
	padding-top: 10px;
	background: black;
	color: grey;
	font-size: .8em;
}

